<resources>
    <string name="app_name">Messenger</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="Login">Login</string>
    <string name="select_photo">Select Photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="enter_message">Enter message</string>
    <string name="todo">TODO</string>
    <string name="message">message</string>
</resources>
