<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        tools:context=".auth.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reg_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            app:civ_border_width="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/profile"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_photo"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="13dp"
            android:background="@drawable/input"
            android:layout_below="@id/reg_image"
            android:textSize="16sp" android:importantForAutofill="no"/>

    <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/reg_username"
            android:padding="13dp"
            android:background="@drawable/input"
            android:inputType="textEmailAddress"
            android:textSize="16sp" android:autofillHints=""/>

    <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="13dp"
            android:background="@drawable/input"
            android:layout_below="@id/reg_email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:textSize="16sp" android:autofillHints=""/>

    <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:layout_below="@id/reg_password"
            android:textAllCaps="false"
            android:layout_margin="30dp"
            android:textSize="18sp"
            android:background="@drawable/button_layout"
            android:text="@string/register"/>

    <TextView
            android:id="@+id/reg_already_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_below="@id/reg_btn"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/already_have_an_account"/>


</RelativeLayout>